feat: 增加 v3 项目资料概览
